--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/Dalas/TornadoSocketsExample#readme",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
